Fix all errorprone warnings